--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -1,6 +1,6 @@
 // ---- Varies ----
-$font: "Sans Serif";
-$main: #1c1c1c;
+$font: "Inter";
+$main: #646e82;
 
 // ---- Global-Tags ----
 html {
@@ -17,108 +17,67 @@ html {
 }
 body {
   position: relative;
-  overflow-x: hidden;
   min-width: 320px;
   font-family: $font;
   font-weight: 400;
-  font-size: 16px;
-  line-height: 18px;
+  font-size: 12px;
+  line-height: 15px;
   color: $main;
+  background: linear-gradient(158.53deg, #eef0f5 14.11%, #e2e4ea 85.89%);
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
 a {
   color: $main;
 }
 
 // ---- Global-Classes ----
-.container {
-  margin: 0 auto;
-  padding: 0 15px;
-  max-width: 1170px;
-}
-
-.title {
-}
-
-.btn {
-  padding: 12px 24px;
-  font-weight: 700;
-  border-radius: 3px;
-  font-size: 14px;
-  line-height: 16px;
+.shadow {
+  box-shadow: -5px -5px 20px rgba(255, 255, 255, 0.53),
+    13px 14px 12px -6px rgba(166, 180, 200, 0.57);
   border: 1px solid transparent;
-  background: #fff;
-  color: #000;
   transition: 0.3s;
+  background: linear-gradient(#eef0f5 0 0) padding-box,
+    linear-gradient(135.83deg, #ffffff 22.24%, #bac3cf 85.59%) border-box;
+}
+.sh-hover {
   &:hover {
-    background: #000;
-    color: #fff;
+    box-shadow: -5px -5px 20px rgba(255, 255, 255, 0.93),
+      13px 14px 12px -6px rgba(166, 180, 200, 0.97);
   }
 }
-
-.input-block {
-  position: relative;
-  .input {
-    font-family: $font;
-    font-size: 12px;
-    line-height: 18px;
-    color: #fff;
-    width: 100%;
-    height: 100%;
-    background: rgba(#000, 0.75);
-    padding: 11px 16px;
-    border: 1px solid transparent;
-    transition: 0.2s;
-    &::placeholder {
-      color: #fff;
-    }
-    &:hover, &:focus {
-      border: 1px solid rgba(#fff, 0.45);
-    }
-  }
-  &.input-error {
-    input {
-      border: 1px solid rgb(95, 8, 8);
-    }
-  }
+.avatar {
+  border-radius: 50%;
+  width: 48px;
+  height: 48px;
+  object-fit: cover;
 }
-.error {
-  position: absolute;
-  bottom: -5px;
-  right: 15px;
-  z-index: 30;
-  background-color: rgb(95, 8, 8);
-  color: #000;
-  padding: 0px 5px;
-  font-size: 10px;
-  line-height: 14px;
+.user-name {
+  font-weight: 700;
 }
-
-.wrapper {
-  position: relative;
-  &::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    z-index: 0;
-    background-color: rgba(#000, 0.3);
+.control {
+  cursor: pointer;
+  transition: 0.2s;
+  &:hover {
+    transform: translateY(-3px);
   }
 }
 
 // ScrollBar
 ::-webkit-scrollbar {
   width: 5px;
+  display: none;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: #fff;
+  background-color: $main;
+  border-radius: 5px;
 }
 ::-webkit-scrollbar-track {
-  background-color: #1c1c1c;
+  background-color: transparent;
 }
 
 // Selection
 ::selection {
-  background: rgba($main, 0.6) !important;
+  background: rgba($main, 0.4) !important;
 }
