--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -1,6 +1,7 @@
 // ---- Varies ----
 $font: "Inter";
 $main: #646e82;
+$bg: linear-gradient(158.53deg, #eef0f5 14.11%, #e2e4ea 85.89%);
 
 // ---- Global-Tags ----
 html {
@@ -61,6 +62,38 @@ a {
   transition: 0.2s;
   &:hover {
     transform: translateY(-3px);
+  }
+}
+.btn {
+  font-size: 16px;
+  line-height: 19px;
+  border-radius: 5px;
+  background: $main;
+  padding: 11px 36px;
+  color: #fff;
+}
+.input {
+  position: relative;
+  width: 100%;
+  border-radius: 5px;
+  input {
+    width: 100%;
+    padding: 11px 13px;
+    font-size: 16px;
+    line-height: 19px;
+    color: $main;
+    padding-right: 35px;
+  }
+  .close {
+    transition: 0.1s;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    fill: $main;
+    width: 13px;
+    height: 13px;
   }
 }
 
