--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,4 @@
+// --------- sidebar ----------
 .sidebar {
   width: 30%;
   position: relative;
@@ -10,7 +11,7 @@
     position: relative;
   }
 }
-
+// --------- sidebar__header ----------
 .sidebar__header {
   display: flex;
   align-items: center;
@@ -42,7 +43,7 @@
     }
   }
 }
-
+// --------- sidebar__search ----------
 .sidebar__search {
   margin-bottom: 15px;
   position: relative;
@@ -73,12 +74,13 @@
   }
 }
 
+// --------- users__list ----------
 .users__list {
   overflow: auto;
   max-height: 82%;
   padding: 0 30px;
 }
-
+// --------- users__list-item ----------
 .users__list-item {
   display: flex;
   align-items: center;
@@ -113,11 +115,11 @@
   }
 }
 
+// --------- primary-classes ----------
 .main {
   display: flex;
   height: 100%;
 }
-
 .bg {
   background-image: url("../img/bg.png");
   background-repeat: repeat;
@@ -125,9 +127,10 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  opacity: 0.1;
+  opacity: 0.7;
 }
 
+// --------- chat ----------
 .chat {
   position: relative;
   width: 70%;
@@ -136,7 +139,7 @@
   top: 13%;
   position: relative;
 }
-
+// --------- chat__header ----------
 .chat__header {
   &.disabled {
     transform: translateY(-150%);
@@ -198,7 +201,7 @@
     }
   }
 }
-
+// --------- chat__compose ----------
 .chat__compose {
   &.disabled {
     transform: translateY(150%);
@@ -248,6 +251,7 @@
   }
 }
 
+// --------- chat__messages ----------
 .chat__messages {
   position: relative;
   overflow: scroll;
@@ -271,6 +275,7 @@
   }
 }
 
+// --------- messages ----------
 .messages {
   // display: flex;
   // display: block;
@@ -313,7 +318,7 @@
     }
   }
 }
-
+// --------- message ----------
 .message {
   position: relative;
   padding: 7px 15px;
@@ -355,7 +360,7 @@
     }
   }
 }
-
+// --------- messages.his ----------
 .messages.his {
   .message__wrapper {
     text-align: right;
@@ -365,6 +370,7 @@
   }
 }
 
+// --------- empty__list ----------
 .empty__list {
   text-align: center;
   padding: 50px 0;
@@ -386,5 +392,161 @@
     width: 90%;
     margin: 0 auto;
     opacity: 0.7;
+  }
+}
+
+// --------- sidebar__personal ----------
+.sidebar__personal {
+  transition: 0.5s ease-in-out;
+  transform: translateX(-100%);
+  &.active {
+    transform: translateX(0%);
+  }
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: $bg;
+  z-index: 300;
+  padding: 120px 30px 0;
+  .sidebar__personal-back {
+    position: absolute;
+    left: 30px;
+    top: 30px;
+    fill: $main;
+    width: 18px;
+    height: 11px;
+  }
+  .sidebar__personal-avatar {
+    width: 182px;
+    height: 182px;
+    margin: 0 auto;
+    margin-bottom: 70px;
+    position: relative;
+    border-radius: 50%;
+    cursor: pointer;
+    &::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: rgba(#000, 0.7);
+      top: 0;
+      left: 0;
+      border-radius: 50%;
+      opacity: 0;
+      transition: 0.3s;
+    }
+    img {
+      width: 100%;
+      height: 100%;
+    }
+    .edit {
+      opacity: 0;
+      z-index: 50;
+      width: 41px;
+      height: 41px;
+      fill: #fff;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      transition: 0.3s;
+    }
+    &:hover {
+      &::after {
+        opacity: 1;
+      }
+      .edit {
+        opacity: 1;
+      }
+    }
+  }
+  .sidebar__personal-input {
+    label {
+      font-size: 12px;
+      line-height: 15px;
+    }
+    input {
+      border-radius: 5px;
+      margin-top: 10px;
+    }
+  }
+  .sidebar__personal-save {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 25px;
+  }
+}
+
+// --------- preloader ----------
+.preloader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+  &__logo {
+    width: 120px;
+    height: 200px;
+    object-fit: cover;
+    margin-bottom: 35px;
+  }
+  &__bar {
+    width: 435px;
+    height: 14px;
+    border-radius: 20px;
+    position: relative;
+    span {
+      position: absolute;
+      left: 0;
+      top: 50%;
+      transform: translateY(-50%);
+      height: 100%;
+      background-color: $main;
+      border-radius: 20px;
+      transition: 0.2s ease-in-out;
+    }
+  }
+}
+
+// --------- register ----------
+.register {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+  &__logo {
+    width: 120px;
+    height: 200px;
+    object-fit: cover;
+    margin-bottom: 35px;
+  }
+  .register__inputs {
+    margin-bottom: 52px;
+    width: 27%;
+  }
+  &__input {
+    &:not(:last-child) {
+      margin-bottom: 15px;
+    }
+  }
+  &__btn {
+    margin-bottom: 30px;
+  }
+  &__pretext {
+    font-size: 12px;
+    line-height: 14px;
+    text-align: center;
+    a {
+      font-weight: 700;
+      transition: 0.2s;
+      &:hover {
+        text-shadow: 3px 3px 4px rgba($main, 0.3);
+      }
+    }
   }
 }
