--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,9 @@
     z-index: 50;
     position: relative;
   }
+  .sidebar__inner {
+    height: 100%;
+  }
 }
 // --------- sidebar__header ----------
 .sidebar__header {
@@ -32,7 +35,7 @@
     margin-right: 15px;
     color: $main;
   }
-  .settings {
+  .settings__btn {
     width: 24px;
     height: 24px;
     fill: $main;
@@ -77,8 +80,9 @@
 // --------- users__list ----------
 .users__list {
   overflow: auto;
-  max-height: 82%;
-  padding: 0 30px;
+  height: 82%;
+  padding: 25px 30px 0;
+  margin-top: -25px;
 }
 // --------- users__list-item ----------
 .users__list-item {
@@ -88,6 +92,7 @@
   position: relative;
   padding: 18px;
   margin-bottom: 14px;
+  cursor: pointer;
   &:first-child {
     // margin-top: 15px;
   }
@@ -370,14 +375,14 @@
   }
 }
 
-// --------- empty__list ----------
-.empty__list {
+// --------- empty__box ----------
+.empty__box {
   text-align: center;
   padding: 50px 0;
-  .empty__list-img {
+  .empty__box-img {
     width: 90%;
   }
-  .empty__list-title {
+  .empty__box-title {
     margin-top: -25px;
     padding: 0 30px;
     font-size: 22px;
@@ -385,7 +390,7 @@
     margin-bottom: 10px;
     text-transform: capitalize;
   }
-  .empty__list-text {
+  .empty__box-text {
     padding: 0 30px;
     font-size: 16px;
     line-height: 26px;
@@ -397,11 +402,6 @@
 
 // --------- sidebar__personal ----------
 .sidebar__personal {
-  transition: 0.5s ease-in-out;
-  transform: translateX(-100%);
-  &.active {
-    transform: translateX(0%);
-  }
   position: absolute;
   top: 0;
   left: 0;
@@ -410,14 +410,6 @@
   background: $bg;
   z-index: 300;
   padding: 120px 30px 0;
-  .sidebar__personal-back {
-    position: absolute;
-    left: 30px;
-    top: 30px;
-    fill: $main;
-    width: 18px;
-    height: 11px;
-  }
   .sidebar__personal-avatar {
     width: 182px;
     height: 182px;
@@ -464,10 +456,6 @@
     }
   }
   .sidebar__personal-input {
-    label {
-      font-size: 12px;
-      line-height: 15px;
-    }
     input {
       border-radius: 5px;
       margin-top: 10px;
@@ -547,6 +535,120 @@
       &:hover {
         text-shadow: 3px 3px 4px rgba($main, 0.3);
       }
+    }
+  }
+}
+
+// --------- search-users ----------
+.search-users {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: $bg;
+  top: 0;
+  left: 0;
+  z-index: 300;
+  padding-top: 100px;
+  .sidebar__search {
+    margin: 0 30px 20px;
+    input {
+      padding: 13px 13px;
+      font-size: 13px;
+      line-height: 16px;
+    }
+  }
+  .search-users__text {
+    padding: 0 30px;
+    margin-left: 15px;
+    margin-bottom: 20px;
+    font-size: 13px;
+    line-height: 18px;
+  }
+  .users__list {
+    height: calc(100% - 0px);
+  }
+  .users__list-item {
+    padding: 10px 18px;
+    cursor: pointer;
+  }
+  .users__item-name {
+    font-size: 13px;
+    line-height: 16px;
+    margin-bottom: 0;
+  }
+}
+
+// --------- settings--left ----------
+.settings--left {
+  padding-top: 100px;
+  .settigns__labels {
+    padding: 0 50px;
+  }
+  .settings__label {
+    font-size: 20px;
+    line-height: 24px;
+    padding: 18px 18px;
+    border-radius: 5px;
+    font-weight: 700;
+    cursor: pointer;
+    border-bottom: 1px solid $main;
+    transition: 0.1s;
+    &.active {
+      background: rgba($main, 0.3);
+    }
+    &:not(:last-child) {
+      margin-bottom: 15px;
+    }
+    &:hover {
+      background: rgba($main, 0.1);
+    }
+  }
+}
+
+// --------- settings--right ----------
+.settings--right {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: $bg;
+  padding: 100px 60px;
+  z-index: 99;
+  width: 70%;
+  height: 100%;
+  transition: 0.2s;
+  transform: translateX(100%);
+  &.active {
+    transition: 0.4s;
+    transform: translateX(0%);
+  }
+  .settings__input {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    .input {
+      margin-right: 25px;
+    }
+    label {
+      font-weight: 700;
+    }
+    input {
+      margin-top: 10px;
+    }
+  }
+  .settings__inputs {
+    width: 100%;
+    margin-right: 25px;
+  }
+  .settings__input:not(:last-child) {
+    margin-bottom: 50px;
+  }
+  .settings__delete {
+    background: rgb(124, 39, 39);
+    box-shadow: -5px -5px 20px rgba(255, 255, 255, 0.53),
+      13px 14px 12px -6px rgba(192, 140, 140, 0.57);
+    margin-top: 70px;
+    &:hover {
+      background: rgba(124, 39, 39, 0.85);
     }
   }
 }
