--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -1,5 +1,5 @@
 // ---- Varies ----
-$font: "Inter";
+$font: 'Inter';
 $main: #646e82;
 $bg: linear-gradient(158.53deg, #eef0f5 14.11%, #e2e4ea 85.89%);
 $bg2: linear-gradient(359.84deg, #e2e4ea 6.56%, #eaecf1 97.86%);
@@ -19,16 +19,16 @@ html {
 }
 body {
   position: relative;
-  min-width: 320px;
   font-family: $font;
   font-weight: 400;
   font-size: 12px;
   line-height: 15px;
   color: $main;
   background: $bg;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
+  margin: 0 auto;
 }
 a {
   color: $main;
@@ -36,8 +36,7 @@ a {
 
 // ---- Global-Classes ----
 .shadow {
-  box-shadow: -5px -5px 20px rgba(255, 255, 255, 0.53),
-    13px 14px 12px -6px rgba(166, 180, 200, 0.57);
+  box-shadow: -5px -5px 20px rgba(255, 255, 255, 0.53), 13px 14px 12px -6px rgba(166, 180, 200, 0.57);
   border: 1px solid transparent;
   transition: 0.3s;
   background: linear-gradient(#eef0f5 0 0) padding-box,
@@ -45,8 +44,7 @@ a {
 }
 .sh-hover {
   &:hover {
-    box-shadow: -5px -5px 20px rgba(255, 255, 255, 0.93),
-      13px 14px 12px -6px rgba(166, 180, 200, 0.97);
+    box-shadow: -5px -5px 20px rgba(255, 255, 255, 0.93), 13px 14px 12px -6px rgba(166, 180, 200, 0.97);
   }
 }
 .avatar {
@@ -57,6 +55,17 @@ a {
 }
 .user-name {
   font-weight: 700;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow-y: hidden;
+  width: 70%;
+}
+.user-text {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow-y: hidden;
 }
 .control {
   cursor: pointer;
