--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -80,7 +80,7 @@
 // --------- users__list ----------
 .users__list {
   overflow: auto;
-  height: 82%;
+  height: 100%;
   padding: 25px 30px 0;
   margin-top: -25px;
 }
@@ -106,7 +106,8 @@
     margin-right: 25px;
     pointer-events: none;
   }
-  .users__info {
+  .user__info {
+    width: 100%;
   }
   .users__item-name {
     margin-bottom: 7px;
@@ -123,7 +124,8 @@
 // --------- primary-classes ----------
 .main {
   display: flex;
-  height: 100%;
+  min-width: 750px;
+  height: 100vh;
 }
 .bg {
   background-image: url('../img/bg.png');
@@ -139,21 +141,25 @@
 .chat {
   position: relative;
   width: 70%;
+}
+.chat__messages-wrapper {
+  position: relative;
+  width: 100%;
   height: 80%;
   overflow: auto;
   top: 13%;
-  position: relative;
 }
+
 // --------- chat__header ----------
 .chat__header {
   &.disabled {
     transform: translateY(-150%);
   }
   transition: 0.5s ease-in-out;
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
-  width: 70%;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -215,8 +221,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 70%;
-  position: fixed;
+  width: 100%;
+  position: absolute;
   bottom: 0px;
   right: 0px;
   padding: 15px 15px 25px;
@@ -411,7 +417,7 @@
   justify-content: center;
   padding: 0;
   span {
-    opacity: 0.50;
+    opacity: 0.5;
     width: 6px;
     height: 6px;
     border-radius: 50%;
